--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
     "web-vitals": "^2.1.0"
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
