--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": ">=22.x"
+    "node": "22.x"
   },
   "eslintConfig": {
     "extends": [
